Fix some presentation bugs on the Level 3 results page. (#291)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -166,7 +166,7 @@
                             elementId="genera"
                             contentBinding="App3.genus_choices"
                             selectionBinding="App3.genus_value"}}
-                          <button id="genus_clear">Clear<button>
+                          <button id="genus_clear">Clear</button>
                         {% endhandlebars %}
                     </div>
                 </div>
