--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -691,12 +691,13 @@ body.skey.results { /* end .already-know */ /* end .modal-wrap */ /* end a */ /*
 body.skey.results .already-know { float: left; margin: 0 0 40px 0; }
 body.skey.results .already-know h6 { color: #807121; font-weight: bold; margin: 0 0 5px 0; }
 body.skey.results .already-know label { color: #807121; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: normal; margin: 5px 0 3px; vertical-align: middle; }
-body.skey.results .already-know select { font-size: 13px; background: #ebf6df; border: 1px solid #9cc86b; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 0; -webkit-appearance: menulist; width: 143px; }
+body.skey.results .already-know select { font-size: 13px; height: 21px; width: 143px; background: #ebf6df; border: 1px solid #9cc86b; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 0; -webkit-appearance: menulist; }
 body.skey.results .already-know button { background: #ebf6df; border: 1px solid #9cc86b; font: -webkit-control; padding: 2px 6px; -webkit-appearance: button; }
 body.skey.results .show-me { float: right; margin: 0 0 15px 0; }
 body.skey.results #results-display { display: inline; }
 body.skey.results #results-display label { color: #000; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 15px; font-weight: normal; }
 body.skey.results #results-display select { font-size: 15px; background: #ebf6df; border: 1px solid #9cc86b; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 0; -webkit-appearance: menulist; }
+body.skey.results #results-display img.icon { margin: 0 3px 0 0; vertical-align: -1px; }
 body.skey.results #modal, body.skey.results #plant-detail-modal { display: none; }
 body.skey.results .modal-wrap { border: 5px solid rgba(255, 255, 255, 0.5); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
 body.skey.results .modal-wrap .inner { background: #fff; padding: 0 0 20px 0; }
@@ -717,7 +718,7 @@ body.skey.results a .get-more-info:active { background-position: 0 -64px; }
 body.skey.results a .go-to-species-page { background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent; height: 31px; margin: 20px 0 0 0; width: 212px; display: block; text-indent: -9000px; }
 body.skey.results a .go-to-species-page:hover { background-position: 0 -31px; }
 body.skey.results a .go-to-species-page:active { background-position: 0 -62px; }
-body.skey.results .plant-list { margin-top: 8px; position: relative; /* end .plant */ }
+body.skey.results .plant-list { margin-top: 8px; position: relative; /* end .plant */ /* List view styles */ /* end table */ }
 body.skey.results .plant-list .plant { background: #fff; border: 1px solid #c3d941; display: none; height: 210px; left: 0px; padding: 8px 6px; position: absolute; text-align: center; top: 0px; width: 160px; /* prevent long names from blowing out layout; allow wrap */ }
 body.skey.results .plant-list .plant.in-results { display: block; }
 body.skey.results .plant-list .plant.genus_join_left { border-left: none; }
@@ -730,6 +731,15 @@ body.skey.results .plant-list .plant p.plant-name { font-family: Tahoma, "Trebuc
 body.skey.results .plant-list .plant p.plant-name span.latin { display: block; font-family: Verdana, Geneva, sans-serif; /* Verdana because it's wider than Trebuchet: easier to read in italics */ font-style: italic; padding-bottom: 4px; }
 body.skey.results .plant-list .plant-img-container { height: 149px; overflow: hidden; width: 160px; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
 body.skey.results .plant-list .plant-img-container img { height: 149px; /* so lazy_images knows when <img> is on screen */ }
+body.skey.results .plant-list .wait { background: url(/static/images/icons/preloaders-dot-net-lg.gif) no-repeat scroll center center transparent; height: 350px; margin: auto; }
+body.skey.results .plant-list table { width: 100%; }
+body.skey.results .plant-list table tr { height: 20px; }
+body.skey.results .plant-list table tr.first-visible td { border-top: 0; }
+body.skey.results .plant-list table td { border-top: 1px solid #e1e1dc; padding: 10px 0; vertical-align: middle; }
+body.skey.results .plant-list table .genus, body.skey.results .plant-list table .scientific-name { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; }
+body.skey.results .plant-list table .genus { color: #1a2e11; font-size: 18px; font-weight: normal; line-height: 200%; padding: 3px 0 0 0; vertical-align: top; }
+body.skey.results .plant-list table .scientific-name { font-size: 15px; font-weight: normal; line-height: 155%; padding: 10px 0 8px 0; }
+body.skey.results .plant-list table .scientific-name img { margin: 0 8px 0 0; padding-bottom: 2px; vertical-align: middle; }
 body.skey.results .missing-image { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eaf2e2), color-stop(100%, #d6e6c5)); background: -moz-linear-gradient(center top, #eaf2e2, #d6e6c5) repeat scroll 0 0 transparent; color: #354d1e; height: 149px; position: relative; width: 160px; }
 body.skey.results .missing-image p { font-size: 12px; height: 40px; left: 50%; line-height: 130%; margin: -20px 0 0 -50px; position: absolute; text-align: center; top: 50%; width: 100px; }
 body.skey.results p.list-all { clear: left; padding-top: 2em; }
@@ -738,7 +748,7 @@ body.skey.results #sidebar { background-color: #fcfdf5; min-height: 800px; paddi
 body.skey.results #sidebar.tinted { background: #fcfdf5; }
 body.skey.results #sidebar div.scroll { border-bottom: 1px solid #9cc86b; border-left: 1px solid #519136; border-top: 1px solid #519136; display: block; height: 335px; margin: 0 0 10px 0; overflow: auto; width: 227px; }
 body.skey.results #sidebar .section.instructions { background: #9cc86b; color: #fff; padding: 16px; }
-body.skey.results #sidebar .section.instructions h5 { line-height: 120%; margin: 0; }
+body.skey.results #sidebar .section.instructions h5 { font-size: 14px; line-height: 120%; margin: 0; }
 body.skey.results #sidebar a.get-choices { background: url(/static/images/layout/get-choices-btn-orange.png) 0 0 no-repeat transparent; display: block; height: 32px; margin: 20px 0 0 0; text-indent: -9000px; width: 171px; }
 body.skey.results #sidebar a.get-choices:hover { background-position: 0 -32px; }
 body.skey.results #sidebar a.get-choices:active { background-position: 0 -64px; }
