Fix a few more presentation bugs on the Level 3 page. (#291)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -178,7 +178,7 @@
                 </div>
         
                 <div class="section">
-                    <h5 class="left help">Need Help?</h5>
+                    <h5 class="left help last">Need Help?</h5>
                     <a href="{% url site-getting-started %}"
                         class="get-help-btn left">Get Help</a>
                     <div class="clearit"></div>
