--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -308,6 +308,8 @@ ul li { margin: 0 0 5px 0; }
 
 .hidden { display: none; }
 
+.clearit { border: none !important; clear: both; float: none !important; height: auto !important; margin: 0 !important; padding: 0 !important; width: auto !important; }
+
 .missing-image { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eaf2e2), color-stop(100%, #d6e6c5)); background: -webkit-linear-gradient(top center, #eaf2e2, #d6e6c5); background: -moz-linear-gradient(top center, #eaf2e2, #d6e6c5); background: -o-linear-gradient(top center, #eaf2e2, #d6e6c5); background: linear-gradient(top center, #eaf2e2, #d6e6c5); color: #354d1e; height: 149px; position: relative; width: 160px; }
 
 p.new { background: #fff; display: inline-block; font-size: 9px; font-weight: normal; margin: 0; padding: 0 0.25em; text-transform: uppercase; -webkit-border-radius: 0.25em; -moz-border-radius: 0.25em; -ms-border-radius: 0.25em; -o-border-radius: 0.25em; border-radius: 0.25em; }
@@ -687,7 +689,7 @@ body.skey.groups-subgroups .list-item a.plant-in-subgroup:active { background-po
 body.skey.groups-subgroups .not-my-plant { clear: left; float: right; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 20px 0 0; text-align: center; }
 body.skey.groups-subgroups .not-my-plant p { margin: 0; padding: 0; }
 body.skey.groups-subgroups .not-my-plant p + p { font-family: Verdana, Geneva, sans-serif; }
-body.skey.results { /* end .already-know */ /* end .modal-wrap */ /* end a */ /* end .plant-list */ /* end #sidebar */ /* end #intro-overlay */ /* end #results-tabs */ /* Ordinarily this message will have its centering done by JavaScript. See gobotany.sk.results.notify() */ /* Working Area styles */ /* end .working-area */ }
+body.skey.results { /* end .already-know */ /* end .modal-wrap */ /* end .plant-list */ /* end #sidebar */ /* end #intro-overlay */ /* end #results-tabs */ /* Ordinarily this message will have its centering done by JavaScript. See gobotany.sk.results.notify() */ /* Working Area styles */ /* end .working-area */ }
 body.skey.results .already-know { float: left; margin: 0 0 40px 0; }
 body.skey.results .already-know h6 { color: #807121; font-weight: bold; margin: 0 0 5px 0; }
 body.skey.results .already-know label { color: #807121; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: normal; margin: 5px 0 3px; vertical-align: middle; }
@@ -699,25 +701,27 @@ body.skey.results #results-display label { color: #000; font-family: "Trebuchet 
 body.skey.results #results-display select { font-size: 15px; background: #ebf6df; border: 1px solid #9cc86b; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 0; -webkit-appearance: menulist; }
 body.skey.results #results-display img.icon { margin: 0 3px 0 0; vertical-align: -1px; }
 body.skey.results #modal, body.skey.results #plant-detail-modal { display: none; }
-body.skey.results .modal-wrap { border: 5px solid rgba(255, 255, 255, 0.5); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
+body.skey.results .modal-wrap { border: 5px solid rgba(255, 255, 255, 0.5); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; /* end a */ }
 body.skey.results .modal-wrap .inner { background: #fff; padding: 0 0 20px 0; }
 body.skey.results .modal-wrap .inner h4.heading, body.skey.results .modal-wrap .inner h3.heading { margin: 0; padding: 13px 0 0 20px; }
-body.skey.results .modal-wrap .inner h3.heading { font-style: italic; margin-bottom: 0; margin-left: 245px; }
+body.skey.results .modal-wrap .inner h4.heading { font-size: 18px; }
+body.skey.results .modal-wrap .inner h3.heading { font-size: 24px; font-style: italic; margin-bottom: 0; margin-left: 245px; }
 body.skey.results .modal-wrap .inner h3.heading span { color: #807121; font-size: 16px; font-style: normal; }
 body.skey.results .modal-wrap .inner p { font-size: 12px; margin: 0; padding: 4px 20px 0; }
 body.skey.results .modal-wrap #choices { padding: 10px 20px 0 20px; }
+body.skey.results .modal-wrap #choices ul { list-style-type: none; }
 body.skey.results .modal-wrap #choices li { margin: 0 0 14px; }
 body.skey.results .modal-wrap #plant-details { padding: 10px 10px 0; }
 body.skey.results .modal-wrap .list-item { border-top: none; margin: 0 0 0 0; padding: 0 0 0 0; }
 body.skey.results .modal-wrap .list-item h4 { color: #807121; }
 body.skey.results .modal-wrap .list-item p { padding: 0 0 7px 0; }
-body.skey.results .modal-wrap .list-item .details { margin: 0 0 0 10px; }
-body.skey.results a .get-more-info { background: url(/static/images/layout/get-more-info.png) 0 0 no-repeat transparent; height: 32px; margin: 20px 0 0 0; width: 163px; display: block; text-indent: -9000px; }
-body.skey.results a .get-more-info:hover { background-position: 0 -32px; }
-body.skey.results a .get-more-info:active { background-position: 0 -64px; }
-body.skey.results a .go-to-species-page { background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent; height: 31px; margin: 20px 0 0 0; width: 212px; display: block; text-indent: -9000px; }
-body.skey.results a .go-to-species-page:hover { background-position: 0 -31px; }
-body.skey.results a .go-to-species-page:active { background-position: 0 -62px; }
+body.skey.results .modal-wrap .list-item .details { float: left; margin: 0 0 0 10px; width: 610px; }
+body.skey.results .modal-wrap a.get-more-info { background: url(/static/images/layout/get-more-info.png) 0 0 no-repeat transparent; height: 32px; margin: 20px 0 0 0; width: 163px; display: block; text-indent: -9000px; }
+body.skey.results .modal-wrap a.get-more-info:hover { background-position: 0 -32px; }
+body.skey.results .modal-wrap a.get-more-info:active { background-position: 0 -64px; }
+body.skey.results .modal-wrap a .go-to-species-page { background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent; height: 31px; margin: 20px 0 0 0; width: 212px; display: block; text-indent: -9000px; }
+body.skey.results .modal-wrap a .go-to-species-page:hover { background-position: 0 -31px; }
+body.skey.results .modal-wrap a .go-to-species-page:active { background-position: 0 -62px; }
 body.skey.results .plant-list { margin-top: 8px; position: relative; /* end .plant */ /* List view styles */ /* end table */ }
 body.skey.results .plant-list .plant { background: #fff; border: 1px solid #c3d941; display: none; height: 210px; left: 0px; padding: 8px 6px; position: absolute; text-align: center; top: 0px; width: 160px; /* prevent long names from blowing out layout; allow wrap */ }
 body.skey.results .plant-list .plant.in-results { display: block; }
@@ -752,9 +756,12 @@ body.skey.results #sidebar .section.instructions h5 { font-size: 14px; line-heig
 body.skey.results #sidebar .section p.get-more { font-size: 11px; line-height: 16px; margin: 0 0 20px; text-align: center; }
 body.skey.results #sidebar .section p.get-more a { cursor: pointer; display: block; font-weight: bold; margin: 18px 0 10px; }
 body.skey.results #sidebar .section p.get-more a.get-choices { margin: 0 auto 4px; }
-body.skey.results #sidebar a.get-choices { background: url(/static/images/layout/get-choices-btn-orange.png) 0 0 no-repeat transparent; display: block; height: 32px; margin: 10px 0 4px 10px; text-indent: -9000px; width: 171px; }
-body.skey.results #sidebar a.get-choices:hover { background-position: 0 -32px; }
-body.skey.results #sidebar a.get-choices:active { background-position: 0 -64px; }
+body.skey.results #sidebar .section a.get-help-btn { background: url(/static/images/layout/get-help-btn-orange.png) 0 0 no-repeat transparent; height: 32px; margin: 10px 0 0 20px; width: 104px; display: block; text-indent: -9000px; }
+body.skey.results #sidebar .section a.get-help-btn:hover { background-position: 0 -32px; }
+body.skey.results #sidebar .section a.get-help-btn:active { background-position: 0 -64px; }
+body.skey.results #sidebar .section a.clear-all-btn { background: url(/static/images/layout/clear-all-btn.png) 0 0 no-repeat transparent; height: 32px; margin: 0 0 0 22px; width: 104px; display: block; text-indent: -9000px; }
+body.skey.results #sidebar .section a.clear-all-btn:hover { background-position: 0 -32px; cursor: pointer; }
+body.skey.results #sidebar .section a.clear-all-btn:active { background-position: 0 -64px; cursor: pointer; }
 body.skey.results #sidebar h6 { color: #807121; font-weight: bold; margin: 0 0 8px 0; }
 body.skey.results #sidebar .option-list li { background: #fff; border-top: 1px solid #c3d941; cursor: pointer; display: block; margin: 0; padding: 12px; }
 body.skey.results #sidebar .option-list li.last { border-bottom: 1px solid #c3d941; }
@@ -764,18 +771,21 @@ body.skey.results #sidebar .option-list .option { color: #1a2e11; text-decoratio
 body.skey.results #sidebar .option-list .option span.name { display: block; font-weight: bold; margin: 0 0 3px 0; }
 body.skey.results #sidebar .option-list .clear-filter { display: block; margin-top: 4px; width: 45px; }
 body.skey.results #sidebar .loading { background: url(/static/images/icons/preloaders-dot-net-sm.gif) no-repeat scroll 0 0 transparent; font-weight: bold; margin: 12px; padding: 0 0 0 20px; }
+body.skey.results a.get-choices { background: url(/static/images/layout/get-choices-btn-orange.png) 0 0 no-repeat transparent; display: block; height: 32px; margin: 10px 0 4px 10px; text-indent: -9000px; width: 171px; }
+body.skey.results a.get-choices:hover { background-position: 0 -32px; }
+body.skey.results a.get-choices:active { background-position: 0 -64px; }
 body.skey.results #intro-overlay { /* for introductory overlay */ display: none; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 40px; text-align: center; z-index: 1000; /* Arrows */ }
-body.skey.results #intro-overlay div { background-color: #f0f0c0; color: #fff; margin-bottom: 10%; padding: 0.5em 1em; position: relative; box-shadow: 0px 5px 20px black; -moz-box-shadow: 0px 5px 20px black; -webkit-box-shadow: 0px 5px 20px black; border-radius: 0.5em; -moz-border-radius: 0.5em; }
+body.skey.results #intro-overlay div { background-color: #f0f0c0; color: #fff; margin-bottom: 10%; padding: 0.6em 0.8em; position: relative; box-shadow: 0px 5px 20px black; -moz-box-shadow: 0px 5px 20px black; -webkit-box-shadow: 0px 5px 20px black; border-radius: 0.25em; -moz-border-radius: 0.25em; }
 body.skey.results #intro-overlay .number-of-species, body.skey.results #intro-overlay .number-of-questions { background-color: #508e31; }
 body.skey.results #intro-overlay .continue { background-color: #dc9402; border: 2px solid #dc9402; cursor: pointer; letter-spacing: 3px; text-shadow: 1px 1px 2px #dc9402; text-transform: uppercase; border-radius: 2em; -moz-border-radius: 2em; /* Gradient generated using the tool "Ultimate CSS Gradient Generator": www.colorzilla.com/gradient-editor */ background: #dc9302; /* Old browsers */ background: -moz-linear-gradient(top, #dc9302 0%, #f4bc53 50%, #dc9302 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dc9302), color-stop(50%, #f4bc53), color-stop(100%, #dc9302)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #dc9302 0%, #f4bc53 50%, #dc9302 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #dc9302 0%, #f4bc53 50%, #dc9302 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top, #dc9302 0%, #f4bc53 50%, #dc9302 100%); /* IE10+ */ background: linear-gradient(top, #dc9302 0%, #f4bc53 50%, #dc9302 100%); /* W3C */ }
 body.skey.results #intro-overlay h1 { font-size: 140%; }
-body.skey.results #intro-overlay .number-of-species:before, body.skey.results #intro-overlay .number-of-questions:before { border-style: solid; border-width: 1em 2em; bottom: 1em; content: ''; height: 0; position: absolute; width: 0; }
+body.skey.results #intro-overlay .number-of-species:before, body.skey.results #intro-overlay .number-of-questions:before { border-style: solid; border-width: 0.9em 1.8em; bottom: 0.8em; content: ''; height: 0; position: absolute; width: 0; }
 body.skey.results #intro-overlay .number-of-species:before { border-color: transparent; right: -5em; }
-body.skey.results #intro-overlay .number-of-questions:before { border-color: transparent #508e31 transparent transparent; left: -4.3em; top: 0.6em; }
+body.skey.results #intro-overlay .number-of-questions:before { border-color: transparent #508e31 transparent transparent; left: -3.9em; top: 0.4em; }
 body.skey.results h3.species-count-heading { /* Move "18 matching species" to the right of Photos/List tab */ font-size: 24px; line-height: 90%; margin: 0; padding: 0; position: relative; }
 body.skey.results h3.species-count-heading > span { left: 330px; position: absolute; top: 0px; }
-body.skey.results h5.help { margin: 0 0 0 0; padding: 3px 0 0 0; }
-body.skey.results a.get-help-btn { margin: 0 0 0 19px; }
+body.skey.results h5.help { font-size: 14px; margin: 0 0 0 0; padding: 3px 0 0 0; }
+body.skey.results h5.help.last { margin-top: 12px; }
 body.skey.results #results-tabs { border-bottom: 1px solid #c3d941; clear: left; height: 28px; margin: 10px 0; }
 body.skey.results #results-tabs a { background: #d6e6c5; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eaf2e2), color-stop(100%, #d6e6c5)); background: -moz-linear-gradient(center top, #eaf2e2, #d6e6c5); border: 1px solid #c3d941; color: #354d1e; cursor: pointer; display: block; float: left; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 18px; line-height: 18px; margin: 0; padding: 5px 10px 4px; text-align: center; width: 100px; -webkit-border-top-left-radius: 6px; -webkit-border-top-right-radius: 6px; -moz-border-radius-topleft: 6px; -moz-border-radius-topright: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; }
 body.skey.results #results-tabs a:hover { background: #e1f2cd; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f0f8e7), color-stop(100%, #e1f2cd)); background: -moz-linear-gradient(center top, #f0f8e7, #e1f2cd); cursor: pointer; text-decoration: none; }
