--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -516,6 +516,7 @@ body.skey {
                     }
                 }
                 .clear-filter {
+                    color: $link-green;
                     display: block;
                     margin-top: 4px;
                     width: 45px;
