--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -967,6 +967,7 @@ input.suggest {
 @import "simplekey";
 @import "plantshare";
 @import "dkey";
+@import "search";
 @import "about";
 @import "legal";
 
