--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1029,6 +1029,26 @@ body.plantshare#screen-images .save-btn { background: transparent url(/static/im
   #dkey #main p.figure { float: none; display: block; margin: 1em auto; } }
 /* These styles apply to smartphones and tablets */
 /* End media queries styles for Dichotomous Key */
+/* Search results */
+body.search-results h1 + p { margin-top: 12px; }
+body.search-results #search-results-list { margin: 6px 0 13px; padding: 6px 0 0; }
+body.search-results #search-results-list .highlighted { font-weight: bold; }
+body.search-results #search-results-list li { list-style-type: none; margin: 0 0 2px; padding: 2px 0; }
+body.search-results #search-results-list li img { float: left; margin: -1px 10px 0; vertical-align: middle; }
+body.search-results #search-results-list li a { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 15px; text-decoration: underline; }
+body.search-results #search-results-list li p { line-height: 140%; margin-left: 44px; margin-top: 2px; }
+body.search-results .search-navigation { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 15px; text-align: center; }
+body.search-results .search-navigation ul { display: inline; }
+body.search-results .search-navigation li { display: inline; margin: 0 2px; }
+body.search-results .search-navigation a { text-decoration: underline; }
+
+/* Begin media queries styles for Search results. */
+/* Portrait-orientation styles */
+/* Landscape-orientation styles */
+/* These styles are common to both smartphone widths */
+@media only screen and (max-width: 600px) { body.search-results .search-navigation { font-size: 18px; line-height: 200%; text-align: center; } }
+/* These styles apply to smartphones and tablets */
+/* End media queries styles for Search results */
 /* About */
 #about #main img { float: right; margin: 5px 0 20px 20px; }
 #about #main img .bookcover { margin-right: 89px; }
