Add new teaching tools to the Teaching page and adjust the page. (#296)

--- a/gobotany/site/templates/gobotany/_sidebar_items.html
+++ b/gobotany/site/templates/gobotany/_sidebar_items.html
@@ -5,7 +5,7 @@
                     </div>
 
                     <div class="section plant-map">
-                        <h4>Shortcut to Groups!</h4>
+                        <h4>Shortcut to Groups</h4>
                         <p>If you already know what group your plant is in, start with the clickable plant map to find your plant more quickly.</p>
                         <a class="view-map-btn" href="{% url site-advanced-map %}">View Map</a>
                     </div>
