--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -17,7 +17,7 @@
 
     <p>Go Botany is designed for students and informal learners ages 10 and
     older, from beginners to professionals. We encourage educators to
-    incorporate Go Botany tools into lessons for all ages!</p>
+    incorporate Go Botany teaching tools into lessons for all ages!</p>
 
     <h2>Share Your Ideas</h2>
 
@@ -26,15 +26,45 @@
     you have developed using Go Botany here. Send your great ideas to
     <a class="email">gobotany [at] newenglandwild [dot] org</a>. Thank you!</p>
 
-    <h2>Tools</h2>
+    <h2>Teaching Tools</h2>
 
     <p class="new">New</p>
+    <h3><a
+        href="/static/docs/new-england-science-frameworks.pdf"
+        target="blank">New England Science Frameworks</a></h3>
+    <p class="meta">PDF, 979 kB. Posted November 2012</p>
+    <p>
+    James Sirch of the <a href="http://peabody.yale.edu/">Yale Peabody
+        Museum of Natural History</a> in New Haven,
+    Connecticut, has put together a helpful, detailed summary of all the
+    ways Go Botany can help teachers meet New England Science
+    Frameworks.
+    Find out how you can integrate Go Botany into your innovative curriculum!
+    </p>
+
+    <p class="new">New</p>
+    <h3><a
+        href="/static/docs/gobotany-plant-id-form.docx"
+        target="blank">Go Botany Plant Identification Form</a></h3>
+    <p class="meta">Microsoft Word document, 37 kB. Posted November 2012</p>
+    <p>
+    Here is a handy form that your students can take with them in the field
+    when using Go Botany to identify plants. It gives them helpful prompts
+    for the observations they should make, and gets them looking carefully.
+    It also encourages students to take meaningful photographs of their
+    plant, to which they can refer later while identifying plants in the
+    classroom. Thanks to Dr. Mario Sousa-Peña, Lead Teacher in Science and
+    BHS Lead Mentor at <a
+        href="http://www.hartfordschools.org/index.php/our-schools/school-listing/schools/items/view/bulkeley-high-school">Bulkeley
+        High School</a> in Hartford, Connecticut for
+    developing this great resource!</p>
+
     <h3><a
         href="/static/docs/books-for-kids-about-wildflowers.pdf"
         target="blank">Bibliography of Children&#8217;s Books on
         the Subject of Botany
 </a></h3>
-    <p class="meta">PDF, 200 kB. Posted 19 May 2012</p>
+    <p class="meta">PDF, 201 kB. Posted May 2012</p>
     <p>
     This is a comprehensive, annotated list of botany-related books, with
     information on the age groups to which these books will appeal. Many
@@ -45,5 +75,5 @@
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "gobotany/_teaching_navigation.html" %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
